syntax = "proto3";

package DC.Packet;

option java_package = "com.packets";
option java_outer_classname = "packets";
option java_multiple_files = false;

message SC2S_ALIVE_REQ {
}

message SS2C_ALIVE_RES {
}

message SC2S_RECONNECT_REQ {
}

message SS2C_RECONNECT_RES {
  uint32 result = 1;
}

message SS2C_CONNECT_SERVICE_INFO_JSON {
  string ipAddress = 1;
  uint32 port = 2;
}

enum PacketCommand {
  PACKET_NONE = 0;
  C2S_ALIVE_REQ = 1;
  S2C_ALIVE_RES = 2;
  C2S_RECONNECT_REQ = 3;
  S2C_RECONNECT_RES = 4;
  C2S_ACCOUNT_LOGIN_REQ = 11;
  S2C_ACCOUNT_LOGIN_RES = 12;
  C2S_ACCOUNT_CHARACTER_CREATE_REQ = 15;
  S2C_ACCOUNT_CHARACTER_CREATE_RES = 16;
  C2S_ACCOUNT_CHARACTER_LIST_REQ = 17;
  S2C_ACCOUNT_CHARACTER_LIST_RES = 18;
  C2S_ACCOUNT_CHARACTER_DELETE_REQ = 19;
  S2C_ACCOUNT_CHARACTER_DELETE_RES = 20;
  C2S_LOBBY_ENTER_REQ = 21;
  S2C_LOBBY_ENTER_RES = 22;
  C2S_ACCOUNT_AGREE_ANSWER_REQ = 23;
  S2C_ACCOUNT_AGREE_ANSWER_RES = 24;
  C2S_CHARACTER_SELECT_ENTER_REQ = 41;
  S2C_CHARACTER_SELECT_ENTER_RES = 42;
  C2S_LOBBY_CHARACTER_INFO_REQ = 43;
  S2C_LOBBY_CHARACTER_INFO_RES = 44;
  C2S_OPEN_LOBBY_MAP_REQ = 45;
  S2C_OPEN_LOBBY_MAP_RES = 46;
  C2S_LOBBY_REGION_SELECT_REQ = 47;
  S2C_LOBBY_REGION_SELECT_RES = 48;
  C2S_LOBBY_ENTER_FROM_GAME_REQ = 49;
  S2C_LOBBY_ENTER_FROM_GAME_RES = 50;
  C2S_LOBBY_GAME_DIFFICULTY_SELECT_REQ = 51;
  S2C_LOBBY_GAME_DIFFICULTY_SELECT_RES = 52;
  S2C_LOBBY_ACCOUNT_CURRENCY_LIST_NOT = 53;
  S2C_LOBBY_CHARACTER_LOBBY_EMOTE_NOT = 54;
  S2C_LOBBY_REPORT_PUNISH_LIST_NOT = 55;
  C2S_LOBBY_ENTER_COUPON_CODE_REQ = 56;
  S2C_LOBBY_ENTER_COUPON_CODE_RES = 57;
  MIN_INVENTORY_PACKET = 500;
  C2S_INVENTORY_INFO_REQ = 501;
  S2C_INVENTORY_INFO_RES = 502;
  C2S_INVENTORY_ALL_UPDATE_REQ = 503;
  S2C_INVENTORY_ALL_UPDATE_RES = 504;
  C2S_INVENTORY_SINGLE_UPDATE_REQ = 505;
  S2C_INVENTORY_SINGLE_UPDATE_RES = 506;
  C2S_INVENTORY_MOVE_REQ = 507;
  S2C_INVENTORY_MOVE_RES = 508;
  C2S_INVENTORY_MERGE_REQ = 509;
  S2C_INVENTORY_MERGE_RES = 510;
  C2S_INVENTORY_SWAP_REQ = 511;
  S2C_INVENTORY_SWAP_RES = 512;
  C2S_INVENTORY_SPLIT_MOVE_REQ = 513;
  S2C_INVENTORY_SPLIT_MOVE_RES = 514;
  C2S_INVENTORY_SPLIT_MERGE_REQ = 515;
  S2C_INVENTORY_SPLIT_MERGE_RES = 516;
  C2S_INVENTORY_SPLIT_SWAP_REQ = 517;
  S2C_INVENTORY_SPLIT_SWAP_RES = 518;
  C2S_INVENTORY_TWO_HANDED_WEAPON_SWAP_REQ = 519;
  S2C_INVENTORY_TWO_HANDED_WEAPON_SWAP_RES = 520;
  C2S_STORAGE_INFO_REQ = 551;
  S2C_STORAGE_INFO_RES = 552;
  MAX_INVENTORY_PACKET = 600;
  C2S_AUTO_MATCH_REG_REQ = 751;
  S2C_AUTO_MATCH_REG_RES = 752;
  S2C_ENTER_GAME_SERVER_NOT = 753;
  C2S_GAME_ENTER_COMPLETE_NOT = 754;
  S2C_AUTO_MATCH_REG_TEAM_NOT = 755;
  C2S_RECONNECT_INGAME_REQ = 756;
  S2C_RECONNECT_INGAME_RES = 757;
  S2C_FLOOR_MATCHMAKED_NOT = 758;
  MIN_RANKING_PACKET = 800;
  C2S_RANKING_RANGE_REQ = 801;
  S2C_RANKING_RANGE_RES = 802;
  C2S_RANKING_NEARBY_REQ = 803;
  S2C_RANKING_NEARBY_RES = 804;
  C2S_RANKING_CHARACTER_REQ = 805;
  S2C_RANKING_CHARACTER_RES = 806;
  MAX_RANKING_PACKET = 830;
  MIN_FRIEND_PACKET = 900;
  C2S_FRIEND_LIST_REQ = 901;
  S2C_FRIEND_LIST_RES = 902;
  C2S_FRIEND_LIST_ALL_REQ = 903;
  S2C_FRIEND_LIST_ALL_RES = 904;
  C2S_FRIEND_FIND_REQ = 905;
  S2C_FRIEND_FIND_RES = 906;
  MAX_FRIEND_PACKET = 950;
  MIN_PARTY_PACKET = 1000;
  C2S_PARTY_INVITE_REQ = 1001;
  S2C_PARTY_INVITE_RES = 1002;
  S2C_PARTY_INVITE_NOT = 1003;
  C2S_PARTY_INVITE_ANSWER_REQ = 1004;
  S2C_PARTY_INVITE_ANSWER_RES = 1005;
  S2C_PARTY_INVITE_ANSWER_RESULT_NOT = 1006;
  C2S_PARTY_EXIT_REQ = 1007;
  S2C_PARTY_EXIT_RES = 1008;
  S2C_PARTY_MEMBER_INFO_NOT = 1009;
  C2S_PARTY_READY_REQ = 1010;
  S2C_PARTY_READY_RES = 1011;
  S2C_PARTY_EQUIP_ITEM_CHANGE_NOT = 1012;
  S2C_PARTY_REGION_CHANGE_NOT = 1013;
  S2C_PARTY_LOCATION_UPDATE_NOT = 1014;
  S2C_PARTY_CHARACTER_SKIN_LIST_NOT = 1015;
  S2C_PARTY_CHARACTER_SKIN_CHANGE_NOT = 1016;
  S2C_PARTY_ITEM_SKIN_LIST_NOT = 1017;
  S2C_PARTY_ITEM_SKIN_CHANGE_NOT = 1018;
  S2C_PARTY_GAME_DIFFICULTY_CHANGE_NOT = 1019;
  C2S_PARTY_MEMBER_KICK_REQ = 1020;
  S2C_PARTY_MEMBER_KICK_RES = 1021;
  C2S_PARTY_CHAT_REQ = 1022;
  S2C_PARTY_CHAT_RES = 1023;
  S2C_PARTY_CHAT_NOT = 1024;
  S2C_PARTY_READY_CHANGE_NOT = 1025;
  S2C_PARTY_KICKED_OUT_NOT = 1026;
  S2C_PARTY_MEMBER_LOBBY_EMOTE_NOT = 1027;
  C2S_PARTY_START_LOBBY_EMOTE_REQ = 1028;
  S2C_PARTY_START_LOBBY_EMOTE_RES = 1029;
  S2C_PARTY_START_LOBBY_EMOTE_NOT = 1030;
  MAX_PARTY_PACKET = 1150;
  MIN_GM_PACKET = 1200;
  C2S_GM_PARTY_ALL_RANDOM_REQ = 1201;
  S2C_GM_PARTY_ALL_RANDOM_RES = 1202;
  C2S_GM_ENTER_GAME_SPECTATOR_REQ = 1203;
  S2C_GM_ENTER_GAME_SPECTATOR_RES = 1204;
  MAX_GM_PACKET = 1300;
  MIN_MERCHANT_PACKET = 1350;
  C2S_MERCHANT_LIST_REQ = 1351;
  S2C_MERCHANT_LIST_RES = 1352;
  C2S_MERCHANT_STOCK_BUY_ITEM_LIST_REQ = 1353;
  S2C_MERCHANT_STOCK_BUY_ITEM_LIST_RES = 1354;
  C2S_MERCHANT_STOCK_SELL_BACK_ITEM_LIST_REQ = 1355;
  S2C_MERCHANT_STOCK_SELL_BACK_ITEM_LIST_RES = 1356;
  C2S_MERCHANT_STOCK_BUY_REQ = 1357;
  S2C_MERCHANT_STOCK_BUY_RES = 1358;
  C2S_MERCHANT_STOCK_SELL_BACK_REQ = 1359;
  S2C_MERCHANT_STOCK_SELL_BACK_RES = 1360;
  C2S_MERCHANT_SERVICE_CRAFT_LIST_REQ = 1361;
  S2C_MERCHANT_SERVICE_CRAFT_LIST_RES = 1362;
  C2S_MERCHANT_SERVICE_CRAFT_REQ = 1363;
  S2C_MERCHANT_SERVICE_CRAFT_RES = 1364;
  C2S_MERCHANT_SERVICE_REPAIR_REQ = 1365;
  S2C_MERCHANT_SERVICE_REPAIR_RES = 1366;
  C2S_MERCHANT_QUEST_LIST_REQ = 1367;
  S2C_MERCHANT_QUEST_LIST_RES = 1368;
  C2S_MERCHANT_QUEST_REQ = 1369;
  S2C_MERCHANT_QUEST_RES = 1370;
  MAX_MERCHANT_PACKET = 1600;
  MIN_KARMA_PACKET = 1650;
  C2S_KARMA_REPORT_LIST_REQ = 1651;
  S2C_KARMA_REPORT_LIST_RES = 1652;
  C2S_KARMA_REPORT_ACTION_REQ = 1653;
  S2C_KARMA_REPORT_ACTION_RES = 1654;
  S2C_KARMA_RATING_UPDATE_NOT = 1655;
  MAX_KARMA_PACKET = 1700;
  MIN_TRADE_PACKET = 2000;
  C2S_TRADE_CHANNEL_LIST_REQ = 2001;
  S2C_TRADE_CHANNEL_LIST_RES = 2002;
  C2S_TRADE_CHANNEL_SELECT_REQ = 2003;
  S2C_TRADE_CHANNEL_SELECT_RES = 2004;
  C2S_TRADE_CHANNEL_EXIT_REQ = 2005;
  S2C_TRADE_CHANNEL_EXIT_RES = 2006;
  C2S_TRADE_CHANNEL_USER_LIST_REQ = 2007;
  S2C_TRADE_CHANNEL_USER_LIST_RES = 2008;
  S2C_TRADE_CHANNEL_USER_UPDATE_NOT = 2009;
  C2S_TRADE_CHANNEL_CHAT_REQ = 2011;
  S2C_TRADE_CHANNEL_CHAT_RES = 2012;
  C2S_TRADE_CHANNEL_CHAT_TEXT_RANGE_REQ = 2013;
  S2C_TRADE_CHANNEL_CHAT_TEXT_RANGE_RES = 2014;
  C2S_TRADE_MEMBERSHIP_REQUIREMENT_REQ = 2030;
  S2C_TRADE_MEMBERSHIP_REQUIREMENT_RES = 2031;
  C2S_TRADE_MEMBERSHIP_REQ = 2032;
  S2C_TRADE_MEMBERSHIP_RES = 2033;
  C2S_TRADE_REQUEST_REQ = 2034;
  S2C_TRADE_REQUEST_RES = 2035;
  S2C_TRADE_REQUEST_NOT = 2036;
  C2S_TRADE_ANSWER_REQ = 2037;
  S2C_TRADE_ANSWER_RES = 2038;
  S2C_TRADE_ANSWER_REFUSAL_NOT = 2039;
  S2C_TRADING_BEGIN_NOT = 2050;
  C2S_TRADING_CLOSE_REQ = 2051;
  S2C_TRADING_CLOSE_RES = 2052;
  C2S_TRADING_CHAT_REQ = 2053;
  S2C_TRADING_CHAT_RES = 2054;
  C2S_TRADING_ITEM_UPDATE_REQ = 2055;
  S2C_TRADING_ITEM_UPDATE_RES = 2056;
  C2S_TRADING_READY_REQ = 2057;
  S2C_TRADING_READY_RES = 2058;
  S2C_TRADING_READY_NOT = 2059;
  S2C_TRADING_CONFIRM_NOT = 2060;
  C2S_TRADING_CONFIRM_READY_REQ = 2061;
  S2C_TRADING_CONFIRM_READY_RES = 2062;
  S2C_TRADING_CONFIRM_READY_NOT = 2063;
  C2S_TRADING_CONFIRM_CANCEL_REQ = 2064;
  S2C_TRADING_CONFIRM_CANCEL_RES = 2065;
  S2C_TRADING_RESULT_NOT = 2066;
  MAX_TRADE_PACKET = 2300;
  MIN_CUSTOMIZE_PACKET = 2330;
  C2S_CUSTOMIZE_NEW_ITEM_CHECK_REQ = 2331;
  S2C_CUSTOMIZE_NEW_ITEM_CHECK_RES = 2332;
  S2C_CUSTOMIZE_NEW_ITEM_ALERT_NOT = 2333;
  C2S_CUSTOMIZE_CHARACTER_INFO_REQ = 2351;
  S2C_CUSTOMIZE_CHARACTER_INFO_RES = 2352;
  C2S_CUSTOMIZE_ITEM_INFO_REQ = 2353;
  S2C_CUSTOMIZE_ITEM_INFO_RES = 2354;
  C2S_CUSTOMIZE_EMOTE_INFO_REQ = 2355;
  S2C_CUSTOMIZE_EMOTE_INFO_RES = 2356;
  C2S_CUSTOMIZE_ACTION_INFO_REQ = 2357;
  S2C_CUSTOMIZE_ACTION_INFO_RES = 2358;
  C2S_CUSTOMIZE_LOBBY_EMOTE_INFO_REQ = 2359;
  S2C_CUSTOMIZE_LOBBY_EMOTE_INFO_RES = 2360;
  C2S_CUSTOMIZE_CHARACTER_MOUNT_REQ = 2370;
  S2C_CUSTOMIZE_CHARACTER_MOUNT_RES = 2371;
  C2S_CUSTOMIZE_CHARACTER_UNMOUNT_REQ = 2372;
  S2C_CUSTOMIZE_CHARACTER_UNMOUNT_RES = 2373;
  C2S_CUSTOMIZE_ITEM_MOUNT_REQ = 2380;
  S2C_CUSTOMIZE_ITEM_MOUNT_RES = 2381;
  C2S_CUSTOMIZE_ITEM_UNMOUNT_REQ = 2382;
  S2C_CUSTOMIZE_ITEM_UNMOUNT_RES = 2383;
  C2S_CUSTOMIZE_EMOTE_MOUNT_REQ = 2390;
  S2C_CUSTOMIZE_EMOTE_MOUNT_RES = 2391;
  C2S_CUSTOMIZE_EMOTE_UNMOUNT_REQ = 2392;
  S2C_CUSTOMIZE_EMOTE_UNMOUNT_RES = 2393;
  C2S_CUSTOMIZE_ACTION_MOUNT_REQ = 2400;
  S2C_CUSTOMIZE_ACTION_MOUNT_RES = 2401;
  C2S_CUSTOMIZE_ACTION_UNMOUNT_REQ = 2402;
  S2C_CUSTOMIZE_ACTION_UNMOUNT_RES = 2403;
  C2S_CUSTOMIZE_LOBBY_EMOTE_MOUNT_REQ = 2410;
  S2C_CUSTOMIZE_LOBBY_EMOTE_MOUNT_RES = 2411;
  C2S_CUSTOMIZE_LOBBY_EMOTE_UNMOUNT_REQ = 2412;
  S2C_CUSTOMIZE_LOBBY_EMOTE_UNMOUNT_RES = 2413;
  MAX_CUSTOMIZE_PACKET = 2450;
  MIN_SHOP_PACKET = 2501;
  C2S_SHOP_CHARACTER_SKIN_LIST_REQ = 2502;
  S2C_SHOP_CHARACTER_SKIN_LIST_RES = 2503;
  C2S_SHOP_ITEM_SKIN_LIST_REQ = 2504;
  S2C_SHOP_ITEM_SKIN_LIST_RES = 2505;
  C2S_SHOP_EMOTE_LIST_REQ = 2506;
  S2C_SHOP_EMOTE_LIST_RES = 2507;
  C2S_SHOP_ACTION_LIST_REQ = 2508;
  S2C_SHOP_ACTION_LIST_RES = 2509;
  C2S_SHOP_LOBBY_EMOTE_LIST_REQ = 2510;
  S2C_SHOP_LOBBY_EMOTE_LIST_RES = 2511;
  C2S_SHOP_CHARACTER_SKIN_BUY_REQ = 2520;
  S2C_SHOP_CHARACTER_SKIN_BUY_RES = 2521;
  C2S_SHOP_ITEM_SKIN_BUY_REQ = 2522;
  S2C_SHOP_ITEM_SKIN_BUY_RES = 2523;
  C2S_SHOP_EMOTE_BUY_REQ = 2524;
  S2C_SHOP_EMOTE_BUY_RES = 2525;
  C2S_SHOP_ACTION_BUY_REQ = 2526;
  S2C_SHOP_ACTION_BUY_RES = 2527;
  C2S_SHOP_LOBBY_EMOTE_BUY_REQ = 2528;
  S2C_SHOP_LOBBY_EMOTE_BUY_RES = 2529;
  MAX_SHOP_PACKET = 2600;
  MIN_CLASS_PACKET = 3000;
  C2S_CLASS_LEVEL_INFO_REQ = 3001;
  S2C_CLASS_LEVEL_INFO_RES = 3002;
  C2S_CLASS_EQUIP_INFO_REQ = 3031;
  S2C_CLASS_EQUIP_INFO_RES = 3032;
  C2S_CLASS_PERK_LIST_REQ = 3041;
  S2C_CLASS_PERK_LIST_RES = 3042;
  C2S_CLASS_SKILL_LIST_REQ = 3043;
  S2C_CLASS_SKILL_LIST_RES = 3044;
  C2S_CLASS_SPELL_LIST_REQ = 3045;
  S2C_CLASS_SPELL_LIST_RES = 3046;
  C2S_CLASS_ITEM_MOVE_REQ = 3051;
  S2C_CLASS_ITEM_MOVE_RES = 3052;
  C2S_CLASS_SPELL_SLOT_MOVE_REQ = 3053;
  S2C_CLASS_SPELL_SLOT_MOVE_RES = 3054;
  C2S_CLASS_SPELL_SEQUENCE_CHANGE_REQ = 3055;
  S2C_CLASS_SPELL_SEQUENCE_CHANGE_RES = 3056;
  MAX_CLASS_PACKET = 3100;
  MIN_GATHERING_HALL_PACKET = 3200;
  C2S_GATHERING_HALL_CHANNEL_LIST_REQ = 3201;
  S2C_GATHERING_HALL_CHANNEL_LIST_RES = 3202;
  C2S_GATHERING_HALL_CHANNEL_SELECT_REQ = 3203;
  S2C_GATHERING_HALL_CHANNEL_SELECT_RES = 3204;
  C2S_GATHERING_HALL_CHANNEL_EXIT_REQ = 3205;
  S2C_GATHERING_HALL_CHANNEL_EXIT_RES = 3206;
  C2S_GATHERING_HALL_CHANNEL_USER_LIST_REQ = 3207;
  S2C_GATHERING_HALL_CHANNEL_USER_LIST_RES = 3208;
  S2C_GATHERING_HALL_CHANNEL_USER_UPDATE_NOT = 3209;
  C2S_GATHERING_HALL_CHANNEL_CHAT_REQ = 3220;
  S2C_GATHERING_HALL_CHANNEL_CHAT_RES = 3221;
  S2C_GATHERING_HALL_CHANNEL_CHAT_NOT = 3222;
  C2S_GATHERING_HALL_TARGET_EQUIPPED_ITEM_REQ = 3230;
  S2C_GATHERING_HALL_TARGET_EQUIPPED_ITEM_RES = 3231;
  MAX_GATHERING_HALL_PACKET = 3300;
  MIN_META_PACKET = 10000;
  C2S_META_LOCATION_REQ = 10001;
  S2C_META_LOCATION_RES = 10002;
  C2S_BLOCK_CHARACTER_REQ = 10010;
  S2C_BLOCK_CHARACTER_RES = 10011;
  C2S_UNBLOCK_CHARACTER_REQ = 10012;
  S2C_UNBLOCK_CHARACTER_RES = 10013;
  C2S_BLOCK_CHARACTER_LIST_REQ = 10014;
  S2C_BLOCK_CHARACTER_LIST_RES = 10015;
  C2S_HACK_LOG_REQ = 10030;
  S2C_HACK_LOG_RES = 10031;
  S2C_SERVICE_POLICY_NOT = 10050;
  S2C_HACK_CHECK_DLL_LIST_NOT = 10051;
  C2S_RE_LOGIN_REQ = 10060;
  S2C_RE_LOGIN_RES = 10061;
  S2C_CLOSED_GAME_NOT = 10062;
  C2S_USER_CHARACTER_INFO_REQ = 10080;
  S2C_USER_CHARACTER_INFO_RES = 10081;
  S2C_OPERATE_ANNOUNCE_NOT = 10500;
  MAX_META_PACKET = 11000;
}

enum PacketResult {
  RESULT_NONE = 0;
  SUCCESS = 1;
  FAIL_GENERAL = 10;
  FAIL_SHORTAGE = 11;
  FAIL_NO_VALUE = 12;
  FAIL_DUPLICATE_NICKNAME = 13;
  FAIL_CHARACTER_NICKNAME_LENGTH_SHORTAGE = 14;
  FAIL_CHARACTER_NICKNAME_LENGTH_OVER = 15;
  FAIL_CHATACTER_CLASS = 16;
  FAIL_CHARACTER_BAD_NICKNAME = 17;
  FAIL_CHARACTER_MAX_COUNT = 18;
  FAIL_PARTY_INVITE_OFFLINE_CHARACTER = 25;
  FAIL_PARTY_INVITE_NO_LOBBY_CHARACTER = 26;
  FAIL_PARTY_INVITE_ALREADY_PARTY = 27;
  FAIL_PARTY_INVITE_MEMBER_FULL = 28;
  FAIL_EXIT_PARTY_NO_PARTY = 30;
  FAIL_EXIT_ALREADY_GAME_START_PARTY = 31;
  FAIL_PARTY_INVITE_ANSWER_DECLINED = 32;
  FAIL_PARTY_TARGET_BLOCK_CHARACTER = 33;
  FAIL_PARTY_YOU_BLOCKED_CHARACTER = 34;
  FAIL_PARTY_DUPLICATE_REQUEST = 35;
  FAIL_PARTY_INVITE_TARGET_TRADING = 36;
  FAIL_PARTY_CHAT_NO_PARTY = 37;
  FAIL_PARTY_IS_MATCHING = 38;
  FAIL_PARTY_READY_SHORTAGE_ENTRANCE_FEE = 39;
  FAIL_PARTY_READY_SHORTAGE_ENTRANCE_LEVEL = 40;
  FAIL_CHARACTER_SELECT_ENTER_IS_MATCHING = 50;
  FAIL_CHARACTER_SELECT_ENTER_NOT_LOBBY = 51;
  FAIL_PARTY_READY_IS_MATCHING = 55;
  FAIL_MERCHANT_NO_OPEN = 60;
  FAIL_CLASS_NOT_FOUND_OLD_ITEM = 100;
  FAIL_CLASS_NOT_FOUND_NEW_ITEM = 101;
  FAIL_CLASS_NEW_ITEM_CONDITION = 102;
  FAIL_CLASS_SWAP = 103;
  FAIL_CLASS_EQUIP_WEAPON_MASTERY_OLD_ITEM = 104;
  FAIL_CLASS_NOT_FOUND_SPELL_ITEM = 105;
  FAIL_CLASS_DUPLICATE_EQUIP_SPELL_ITEM = 106;
  FAIL_CHAT_MAX_ROOM_USER = 130;
  FAIL_CHAT_SELECT_ALREADY_ROOM = 131;
  FAIL_CHAT_SELECT_NOT_MEMBERSHIP = 132;
  FAIL_CHAT_SELECT_NOT_EXISTS_ROOM = 133;
  FAIL_CHAT_WHISPER_NOT_FOUND_USER = 134;
  FAIL_CHAT_EXIT_NOT_EXISTS_ROOM = 140;
  FAIL_CHAT_EXIT_CANNOT_LEAVE_DURING_TRADE = 141;
  FAIL_TRADE_REQUIREMENT_SHORTAGE_LV = 150;
  FAIL_TRADE_REQUIREMENT_SHORTAGE_GOLD = 151;
  FAIL_TRADE_ALREADY_MEMBERSHIP = 152;
  FAIL_TRADE_TARGET_BLOCK = 153;
  FAIL_TRADE_DUPLICATE_REQUEST = 154;
  FAIL_TRADE_REQUEST_NOT_FOUND_CHANNEL = 155;
  FAIL_TRADE_ANSWER_NO_CHANNEL = 156;
  FAIL_TRADING_NOT_FOUND_USER = 161;
  FAIL_TRADING_ALREADY_TRADING = 162;
  FAIL_TRADING_NO_MEMBERSHIP = 163;
  FAIL_TRADING_SHORTAGE_MINE_GOLD = 164;
  FAIL_TRADING_SHORTAGE_TARGET_GOLD = 165;
  FAIL_TRADING_INGAME_TARGET = 166;
  FAIL_TRADING_NOT_FOUND_ITEM = 167;
  FAIL_TRADING_ALREADY_ITEM = 168;
  FAIL_TRADING_NOT_FOUND_EMPTY_SLOT = 169;
  FAIL_TRADING_READY_SHORTAGE_GOLD = 170;
  FAIL_TRADING_NOT_FOUND_EMPTY_INVENTORY_SLOT = 171;
  FAIL_BLOCK_CHARACTER_ALREADY = 180;
  FAIL_BLOCK_CHARACTER_LIMIT = 181;
  FAIL_BLOCK_CHARACTER_NOT_FOUND = 182;
  FAIL_UNBLOCK_CHARACTER_NOT_FOUND = 183;
  FAIL_CHAT_NOT_FOUND_USER = 190;
  FAIL_FRIEND_FIND_NOT_FOUND = 201;
  FAIL_CUSTOMIZE_NOT_FOUND_ITEM = 250;
  FAIL_CUSTOMIZE_UNEQUIPPED_CLASS = 251;
  FAIL_CUSTOMIZE_NO_MOUNTING_SLOT_AVAILABLE = 252;
  FAIL_CUSTOMIZE_MAXIMUM_LIMIT = 253;
  FAIL_SHOP_ALREADY_ITEM = 270;
  FAIL_SHOP_ITEM_SHORTAGE_CURRENCY = 271;
  FAIL_KARMA_NOT_FOUND_USER = 300;
  FAIL_KARMA_SHORTAGE_TICKET_COUNT = 301;
  FAIL_KARMA_IMPOSSIBLE_ACTION = 302;
  FAIL_KARMA_ALREADY_VOTES = 303;
  FAIL_KARMA_BAD_CHARACTER_IMPOSSIBLE_VOTE = 304;
  FAIL_GATHERING_HALL_NOT_FOUND_USER = 320;
  FAIL_ENTER_GAME_SPECTATOR_NOT_PLAY_GAME = 500;
  FAIL_ENTER_GAME_SPECTATOR_NOT_FOUND_USER = 501;
  FAIL_NOT_GM = 502;
  FAIL_LOBBY_ENTER_COUPON_CODE_INVALID = 550;
  FAIL_LOBBY_ENTER_COUPON_CODE_ALREADY = 551;
  FAIL_LOBBY_ENTER_COUPON_CODE_NOT_VALID_TIME = 552;
}

